Prevent weird-looking double border

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -219,4 +219,13 @@ form {
 	#description {
 		min-height: 300px;
 	}
+	.tab-content {
+		textarea,
+		.commonmark-preview {
+			border-top: none;
+			box-shadow: none;
+			border-top-left-radius: 0;
+			border-top-right-radius: 0;
+		}
+	}
 }
